WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159009
DumpRenderTree crashed in com.apple.WebCore: WebCore::HTMLSelectElement::updateSelectedState
https://bugs.webkit.org/show_bug.cgi?id=159009
Summary
DumpRenderTree crashed in com.apple.WebCore: WebCore::HTMLSelectElement::upda...
Dean Jackson
Reported
2016-06-21 20:01:45 PDT
DumpRenderTree crashed in com.apple.WebCore: WebCore::HTMLSelectElement::updateSelectedState
Attachments
Patch
(2.30 KB, patch)
2016-06-21 20:06 PDT
,
Dean Jackson
jonlee
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2016-06-21 20:03:30 PDT
<
rdar://problem/23454623
>
Dean Jackson
Comment 2
2016-06-21 20:06:51 PDT
Created
attachment 281808
[details]
Patch
Dean Jackson
Comment 3
2016-06-21 20:54:32 PDT
Committed
r202320
: <
http://trac.webkit.org/changeset/202320
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug