DumpRenderTree crashed in com.apple.WebCore: WebCore::HTMLSelectElement::updateSelectedState https://bugs.webkit.org/show_bug.cgi?id=159009 <rdar://problem/23454623>

Reviewed by Jon Lee.

It seems we can get bogus indices from UIKit's implementation
of UIWebSelectMultiplePicker. Guard against this situation.

Covered by running the existing tests in WebKit1 with Guard Malloc,
such as fast/spatial-navigation/snav-multiple-select-optgroup.html

* html/HTMLSelectElement.cpp:
(WebCore::HTMLSelectElement::updateSelectedState): Early return
if we get an index out of range.

Canonical link: https://commits.webkit.org/177087@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202320 268f45cc-cd09-0410-ab3c-d52691b4dbfc